--- a/index.html
+++ b/index.html
@@ -1,1 +1,248 @@
-<h1>hello</h1>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <title>Android latest</title>
+  <meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; width=device-width;">
+  <style>
+    @import url(http://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100);
+    body {
+      background-color: #3e94ec;
+      font-family: "Roboto", helvetica, arial, sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      text-rendering: optimizeLegibility;
+    }
+
+    div.table-title {
+      display: block;
+      margin: auto;
+      max-width: 600px;
+      padding: 5px;
+      width: 100%;
+    }
+
+    .table-title h3 {
+      color: #fafafa;
+      font-size: 30px;
+      font-weight: 400;
+      font-style: normal;
+      font-family: "Roboto", helvetica, arial, sans-serif;
+      text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+      text-transform: uppercase;
+    }
+    /*** Table Styles **/
+
+    .table-fill {
+      background: white;
+      border-radius: 3px;
+      border-collapse: collapse;
+      height: 320px;
+      margin: auto;
+      max-width: 600px;
+      padding: 5px;
+      width: 100%;
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+      animation: float 5s infinite;
+    }
+
+    th {
+      color: #D5DDE5;
+      ;
+      background: #1b1e24;
+      border-bottom: 4px solid #9ea7af;
+      border-right: 1px solid #343a45;
+      font-size: 23px;
+      font-weight: 100;
+      padding: 24px;
+      text-align: left;
+      text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+      vertical-align: middle;
+    }
+
+    th:first-child {
+      border-top-left-radius: 3px;
+    }
+
+    th:last-child {
+      border-top-right-radius: 3px;
+      border-right: none;
+    }
+
+    tr {
+      border-top: 1px solid #C1C3D1;
+      border-bottom-: 1px solid #C1C3D1;
+      color: #666B85;
+      font-size: 16px;
+      font-weight: normal;
+      text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+    }
+
+    tr:hover td {
+      background: #4E5066;
+      color: #FFFFFF;
+      border-top: 1px solid #22262e;
+      border-bottom: 1px solid #22262e;
+    }
+
+    tr:first-child {
+      border-top: none;
+    }
+
+    tr:last-child {
+      border-bottom: none;
+    }
+
+    tr:nth-child(odd) td {
+      background: #EBEBEB;
+    }
+
+    tr:nth-child(odd):hover td {
+      background: #4E5066;
+    }
+
+    tr:last-child td:first-child {
+      border-bottom-left-radius: 3px;
+    }
+
+    tr:last-child td:last-child {
+      border-bottom-right-radius: 3px;
+    }
+
+    td {
+      background: #FFFFFF;
+      padding: 20px;
+      text-align: left;
+      vertical-align: middle;
+      font-weight: 300;
+      font-size: 18px;
+      text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+      border-right: 1px solid #C1C3D1;
+    }
+
+    td:last-child {
+      border-right: 0px;
+    }
+
+    th.text-left {
+      text-align: left;
+    }
+
+    th.text-center {
+      text-align: center;
+    }
+
+    th.text-right {
+      text-align: right;
+    }
+
+    td.text-left {
+      text-align: left;
+    }
+
+    td.text-center {
+      text-align: center;
+    }
+
+    a {
+      color: #FFFFFF;
+      text-decoration: none;
+    }
+
+    td.text-right {
+      text-align: right;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="table-title">
+    <h3>Android latest information</h3>
+    <span style="color:white;display:box">by <a href="https://twitter.com/cesarmcferreira">@cesarmcferreira</a></span>
+  </div>
+
+  <a href="https://github.com/cesarferreira/android-latest"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
+
+  <table class="table-fill">
+    <thead>
+      <tr>
+        <th class="text-left">Variable</th>
+        <th class="text-left">Value</th>
+      </tr>
+    </thead>
+    <tbody class="table-hover">
+      <tr>
+        <td class="text-left">buildGradleToolsVersion</td>
+        <td class="text-left">
+          2.1.3
+        </td>
+      </tr>
+      <tr>
+        <td class="text-left">gradlePropertiesVersion</td>
+        <td class="text-left">
+          2.14.1
+        </td>
+      </tr>
+      <tr>
+        <td class="text-left">latestAndroidVersionCode</td>
+        <td class="text-left">
+          24
+        </td>
+      </tr>
+      <tr>
+        <td class="text-left">compileSdkVersion</td>
+        <td class="text-left">
+          24
+        </td>
+      </tr>
+      <tr>
+        <td class="text-left">buildToolsVersion</td>
+        <td class="text-left">
+          24.0.2
+        </td>
+      </tr>
+      <tr>
+        <td class="text-left">targetSdkVersion</td>
+        <td class="text-left">
+          24
+        </td>
+      </tr>
+      <tr>
+        <td class="text-left">latestSupportVersion</td>
+        <td class="text-left">
+          24.2.0
+        </td>
+      </tr>
+      <tr>
+        <td class="text-left">googlePlayServicesVersion</td>
+        <td class="text-left">
+          9.4.0
+        </td>
+      </tr>
+      <tr>
+        <td class="text-left">latestAndroidVersionNumber</td>
+        <td class="text-left">
+          7.0
+        </td>
+      </tr>
+      <tr>
+        <td class="text-left">latestAndroidVersionName</td>
+        <td class="text-left">
+          Nougat
+        </td>
+      </tr>
+      <tr>
+        <td class="text-left">latestAndroidReleaseDate</td>
+        <td class="text-left">
+          22 August 2016
+        </td>
+      </tr>
+
+    </tbody>
+  </table>
+  </br>
+  </br>
+  </br>
+</body>
+
+</html>
